Initiate working directory: It is possible to select and delete songtexts.

--- a/package.json
+++ b/package.json
@@ -1,25 +1,51 @@
 {
-  "name": "songtext-organizer2",
+  "name": "songtext-organizer",
   "version": "0.1.0",
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
   "private": true,
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "ajv-keywords": "^3.1.0",
+    "aws-sdk": "^2.344.0",
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "chai": "^4.2.0",
+    "immutable": "^3.8.2",
+    "jest": "^23.6.0",
+    "node-pre-gyp": "^0.11.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-global-configuration": "^1.2.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.1",
+    "react-test-renderer": "^16.6.0",
+    "redux": "^3.7.2",
+    "redux-observable": "^0.18.0",
+    "rxjs": "^5.5.10",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.0",
+    "sqlite3": "^4.0.3",
+    "webpack": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.8.0",
+    "jest-cli": "^23.6.0",
+    "react-addons-test-utils": "^15.6.2",
+    "redux-mock-store": "^1.2.1",
+    "webpack-dev-server": "^3.1.3"
+  }
 }
