--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
     "test": "jest",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
+  },
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
